# AbyssSearch

./: .gitignore  PROJECT_PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/admin/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/src/: App.tsx  api.ts  main.tsx  settings.tsx  styles.css  ui.tsx
apps/widget/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/widget/demo/: host.html
apps/widget/src/: App.tsx  context.tsx  dev.tsx  element.tsx  hooks.ts  recent.ts  styles.ts  useHostEmit.ts
apps/widget/test/: App.test.tsx  element.test.tsx  fake.test.ts  util.tsx
docs/services/: README.md  admin-api.md  admin-console.md  analytics-service.md  api-gateway.md  elasticsearch.md  embedding-service.md  ingestion-orchestrator.md  ingestion-workers.md  ner-service.md  object-storage-minio.md  postgresql.md  rag-service.md  reranker-service.md  scheduler.md  search-service.md  tenant-config-service.md  valkey.md  widget.md
infra/: docker-compose.yml
scripts/: README.md  dev-down.ps1  dev-status.ps1  dev-up.ps1  pg-down.ps1  pg-up.ps1  verify-gaps.ps1  write-s4-env.ps1
scripts/lib/: docker.ps1  wsl-keepalive.ps1
services/analysis-ml/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/analysis-ml/app/: concurrency.py  config.py  logging.py  main.py  metrics.py  schemas.py
services/analysis-ml/app/embedding/: embedder.py  router.py  service.py
services/analysis-ml/app/ner/: analyzer.py  router.py  service.py
services/analysis-ml/tests/: conftest.py  test_api.py  test_ner_api.py  test_ner_service.py  test_service.py
services/analytics/: .env.example  README.md  pyproject.toml
services/analytics/app/: api.py  config.py  main.py  metrics.py  schemas.py  store.py  wiring.py
services/analytics/tests/: test_analytics.py
services/api-gateway/: .dockerignore  .env.example  Dockerfile  README.md  package.json  tsconfig.build.json
services/api-gateway/src/: app.module.ts  main.ts
services/ingestion/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/ingestion/app/: __init__.py  api.py  auth.py  config.py  db.py  domain.py  main.py  metrics.py  orchestrator.py  repository.py  schemas.py  wiring.py
services/ingestion/app/clients/: enrich.py  indexer.py
services/ingestion/app/pipeline/: __init__.py  entities.py  ids.py  normalize.py  runner.py  suggest_terms.py
services/ingestion/app/workers/: __init__.py  celery_app.py
services/ingestion/samples/: demo-docs.json  more-docs.json
services/ingestion/tests/: conftest.py  test_analyze.py  test_api.py  test_orchestrator.py  test_pipeline_core.py  test_runner.py  test_suggest_terms.py
services/rag/: .env.example  README.md  pyproject.toml
services/rag/app/: api.py  config.py  main.py  metrics.py  prompt.py  rrf.py  schemas.py  service.py  wiring.py
services/rag/app/clients/: embed.py  llm.py  retriever.py
services/rag/tests/: test_api.py  test_service.py
services/search-service/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
services/search-service/src/: app.module.ts  (+1 more)
services/tenant-config/: .env.example  Dockerfile  README.md  jest.config.js  package.json  tsconfig.build.json  tsconfig.json
(+91 files in other folders)
