[project]
name = "analytics-service"
version = "0.1.0"
description = "S13 Analytics Service - buffered event intake + tenant-scoped search reports (top queries, zero-results, CTR, latency) over Elasticsearch."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "elasticsearch>=8.15,<9",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
